# PyTorch-CPP

./: CMakeLists.txt  README.md  label.txt  model_trace.py  prediction.cpp
